@@ -1,18 +1,20 @@
 #include <sys/time.h>
 
-struct timeval tval;
+struct timespec tval, stm, dummy;
 
 static void clockfunc()
 {  
-    gettimeofday(&tval, NULL);
-    MYINT now = (tval.tv_sec * 1000000) + tval.tv_usec;
-    push(now);
+    // gettimeofday(&tval, NULL)
+    clock_gettime(CLOCK_MONOTONIC, &tval);
+    unsigned long long now = (tval.tv_sec * 1000000000L) + tval.tv_nsec;
+    now = now / 1000L;
+    push((MYINT)now);
 }
 
 static void sleepfunc() {
-    MYINT sleeptime = pop();
-    struct timespec t1, t2;
-    t1.tv_sec = floor(sleeptime);
-    t1.tv_nsec = round(fmod(sleeptime, 1) * 1000000000);
-    nanosleep(&t1, &t2);
+    MYINT sleeptime_ns = pop();
+    MYINT sleeptime_sec = pop();
+    stm.tv_sec = sleeptime_sec;
+    stm.tv_nsec = sleeptime_ns;
+    nanosleep(&stm, &dummy);
 }
